--- a/movies/src/App.css
+++ b/movies/src/App.css
@@ -1,6 +1,20 @@
-.App {
-  text-align: center;
+.inputBar{
+    margin-top: 5;
+    margin-left: 25;
+    width: 90%;
+    font-size: 24;
+    display: block;
+    padding-top: 8;
+    padding-bottom: 8;
+  
 }
+.titleBar {
+  background: #222780;
+  display: block;
+  color: #fff;
+  padding-left: 16px;
+}
+
 
 .App-logo {
   height: 40vmin;
