--- a/movies/src/App.css
+++ b/movies/src/App.css
@@ -19,7 +19,10 @@
   text-align: center;
   border: 1px solid black;
   box-shadow:0 0 10px 4px #e72f2fe8;
-  
+}@media only screen and (max-width: 600px) {
+  .maintable{
+    width: 100%;
+  }
 }
 
 
@@ -33,7 +36,7 @@
   justify-content: center;
 } @media only screen and (max-width: 600px) {
   .titleBar {
-    width: 122%;
+    width: 108%;
   }
 }
 
